[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "street-ninja-common"
version = "1.0.0"
description = "Shared utilities for Street Ninja ecosystem"
requires-python = ">=3.10"
dependencies = [
    "Django>=4.0.0",
    "django-redis==5.4.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["street_ninja_common*"]